[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/inventory.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxInventory" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -20.0
margin_right = 375.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="CenterContainer" parent="HBoxInventory"]
margin_right = 121.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox" type="VBoxContainer" parent="HBoxInventory/Slot1"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item" type="Label" parent="HBoxInventory/Slot1/Vbox"]
margin_right = 41.0
margin_bottom = 14.0
text = "empty"
align = 1

[node name="Slot2" type="CenterContainer" parent="HBoxInventory"]
margin_left = 125.0
margin_right = 247.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox2" type="VBoxContainer" parent="HBoxInventory/Slot2"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item2" type="Label" parent="HBoxInventory/Slot2/Vbox2"]
margin_right = 41.0
margin_bottom = 14.0
text = "empty"
align = 1

[node name="Slot3" type="CenterContainer" parent="HBoxInventory"]
margin_left = 251.0
margin_right = 372.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox3" type="VBoxContainer" parent="HBoxInventory/Slot3"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item3" type="Label" parent="HBoxInventory/Slot3/Vbox3"]
margin_right = 41.0
margin_bottom = 14.0
text = "empty"
align = 1

[node name="Slot4" type="CenterContainer" parent="HBoxInventory"]
margin_left = 376.0
margin_right = 498.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox4" type="VBoxContainer" parent="HBoxInventory/Slot4"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item4" type="Label" parent="HBoxInventory/Slot4/Vbox4"]
margin_right = 41.0
margin_bottom = 14.0
text = "empty"
align = 1

[node name="Slot5" type="CenterContainer" parent="HBoxInventory"]
margin_left = 502.0
margin_right = 624.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox5" type="VBoxContainer" parent="HBoxInventory/Slot5"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item5" type="Label" parent="HBoxInventory/Slot5/Vbox5"]
margin_right = 41.0
margin_bottom = 14.0
text = "empty"
align = 1

[node name="Slot6" type="CenterContainer" parent="HBoxInventory"]
margin_left = 628.0
margin_right = 750.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox6" type="VBoxContainer" parent="HBoxInventory/Slot6"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item6" type="Label" parent="HBoxInventory/Slot6/Vbox6"]
margin_right = 41.0
margin_bottom = 14.0
text = "empty"
align = 1

[connection signal="mouse_entered" from="HBoxInventory/Slot1" to="." method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="HBoxInventory/Slot1" to="." method="_on_Slot1_mouse_exited"]
[connection signal="mouse_entered" from="HBoxInventory/Slot2" to="." method="_on_Slot2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxInventory/Slot2" to="." method="_on_Slot2_mouse_exited"]
[connection signal="mouse_entered" from="HBoxInventory/Slot3" to="." method="_on_Slot3_mouse_entered"]
[connection signal="mouse_exited" from="HBoxInventory/Slot3" to="." method="_on_Slot3_mouse_exited"]
[connection signal="mouse_entered" from="HBoxInventory/Slot4" to="." method="_on_Slot4_mouse_entered"]
[connection signal="mouse_exited" from="HBoxInventory/Slot4" to="." method="_on_Slot4_mouse_exited"]
[connection signal="mouse_entered" from="HBoxInventory/Slot5" to="." method="_on_Slot5_mouse_entered"]
[connection signal="mouse_exited" from="HBoxInventory/Slot5" to="." method="_on_Slot5_mouse_exited"]
[connection signal="mouse_entered" from="HBoxInventory/Slot6" to="." method="_on_Slot6_mouse_entered"]
[connection signal="mouse_exited" from="HBoxInventory/Slot6" to="." method="_on_Slot6_mouse_exited"]
